deploy/apps/20-art-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: art-api
  namespace: apps
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: art-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: art-api
  namespace: apps
spec:
  progressDeadlineSeconds: 1800
  replicas: 1
  selector:
    matchLabels:
      app: art-api
  template:
    metadata:
      labels:
        app: art-api
    spec:
      imagePullSecrets:
        - name: tcr-registry
      containers:
        - name: art-api
          image: ccr.ccs.tencentyun.com/rain7788/art-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: http
          readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 20
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 512Mi
