deploy/apps/21-art-web-admin.yaml
apiVersion: v1
kind: Service
metadata:
  name: art-web-admin
  namespace: apps
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: art-web-admin
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: art-web-admin
  namespace: apps
spec:
  progressDeadlineSeconds: 1800
  replicas: 1
  selector:
    matchLabels:
      app: art-web-admin
  template:
    metadata:
      labels:
        app: art-web-admin
    spec:
      imagePullSecrets:
        - name: tcr-registry
      containers:
        - name: art-web-admin
          image: ccr.ccs.tencentyun.com/rain7788/art-web-admin:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              cpu: 20m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 128Mi
