deploy/apps/22-art-docs.yaml
apiVersion: v1
kind: Service
metadata:
  name: art-docs
  namespace: apps
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: art-docs
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: art-docs
  namespace: apps
spec:
  progressDeadlineSeconds: 1800
  replicas: 1
  selector:
    matchLabels:
      app: art-docs
  template:
    metadata:
      labels:
        app: art-docs
    spec:
      imagePullSecrets:
        - name: tcr-registry
      containers:
        - name: art-docs
          image: ccr.ccs.tencentyun.com/rain7788/art-docs:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
            limits:
              cpu: 100m
              memory: 64Mi
